make sure about the action defs of order page.

--- a/general/com/fan1tuan/config/fan1tuan.properties
+++ b/general/com/fan1tuan/config/fan1tuan.properties
@@ -8,7 +8,7 @@ securelogin.enabled=false
 securelogin.http.port=8080
 securelogin.https.port=843
 
-fan1tuan.home=http://localhost:8080/fan1tuan/index.f1t
+fan1tuan.home=http://localhost:8080/index.f1t
 
 
 
